respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>AccountName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>relación a Account Address</description>
        <label>Account Address</label>
        <referenceTo>Account_Address__c</referenceTo>
        <relationshipLabel>SAP Responses</relationshipLabel>
        <relationshipName>SAP_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DISBURSEMENTNAME__c</fullName>
        <label>DISBURSEMENTNAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disbursement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disbursement</label>
        <referenceTo>Shipment_Disbursement__c</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>INVOICENAME__c</fullName>
        <label>INVOICENAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_SAP_Response_General__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo que captura el SAP Response de forma general</description>
        <label>Last SAP Response General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_SAP_Response__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo utilizado para identificar el último SAP Response con error</description>
        <label>Last SAP Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_2__c</fullName>
        <label>Message 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_Consumo__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Consumo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Disbursement</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>ShipmentLine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrdenVentaSAP__c</fullName>
        <label>OrdenVentaSAP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SHIPMENTNAME__c</fullName>
        <label>SHIPMENTNAME</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <formula>Shipment__r.ShipmentService__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servicio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipName>Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SolOrdenCompraSAP__c</fullName>
        <label>SolOrdenCompraSAP</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>CONFIRM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>base64__c</fullName>
        <label>base64</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>SAP Response</label>
    <listViews>
        <fullName>MESSAGES</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Invoice__c</columns>
        <columns>Message_2__c</columns>
        <columns>Message__c</columns>
        <columns>Shipment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <filters>
            <field>Message__c</field>
            <operation>contains</operation>
            <value>Error: The given key</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>11/1/2021 12:00 AM</value>
        </filters>
        <label>MESSAGES</label>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>NAME</columns>
        <columns>Shipment__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>RE-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>